@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-02T01:49:22Z",
+  "timestamp" : "2022-08-02T08:19:55Z",
   "count_outdated" : 426,
   "uniques_outdated" : 245,
-  "count" : 458,
-  "uniques" : 262,
+  "count" : 459,
+  "uniques" : 263,
   "clones" : [
     {
       "timestamp": "2022-07-19T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-08-01T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
